--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
   <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+  
   <div class="container">
     <div class="left-content">
-      
-      <img src="./images/illustration-woman-online-desktop.svg" alt="">
+      <img  class="box" src="./images/illustration-box-desktop.svg" alt="">
+      <img class="img" src="./images/illustration-woman-online-desktop.svg" alt="">
     </div>
     <div class="right-content">
       <div class="header">
